--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,6 +1,4 @@
 .contact-content {
-  background-color: #FDF0E9;
-
   border-radius: 6px 6px 0 0;
 
   &__get-in-touch {
@@ -10,8 +8,228 @@
     height: 800px;
     width: 100%;
   }
+}
 
-  &__form {
-      
+.form {
+  margin: 30px;
+  & * {
+    outline: none;
+  }
+
+  display: flex;
+  flex-direction: column;
+  background: rgba(255, 255, 255, 0.75);
+  border-radius: 6px;
+  width: 50%;
+  color: black;
+  padding: 48px;
+
+  &__title {
+    font-size: 24px;
+    line-height: 32px;
+    color: #391400;
+  }
+
+  &__item {
+    margin: 0 0 16px 0;
+  }
+
+  &__input {
+    height: 50px;
+    padding: 0 20px;
+    background: #FFFFFF;
+    border: 1px solid #F3D1BF;
+    border-radius: 6px;
+    width: 100%;
+    font-size: 16px;
+
+    &::placeholder {
+      color: #000;
+    }
+  }
+
+  &__button {
+    align-self: flex-end;
+    width: 154px;
+    height: 48px;
+    background: #EF6D58;
+    border-radius: 6px;
+    font-size: 14px;
+    line-height: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08);
+    border-radius: 6px;
+
+    &:hover {
+      background-color: #ffffff;
+      border-color: #EF6D58;
+      border: 1px solid;
+      transition: all 0.3s;
+      color: #000;
+    }
+
+  }
+
+}
+
+.select {
+  display: block;
+  position: relative;
+}
+
+.new-select {
+  position: relative;
+  border: 1px solid #F3D1BF;
+  border-radius: 6px;
+  background: #FFFFFF;
+  width: 100%;
+  height: 50px;
+  font-size: 16px;
+  padding: 14px 20px;
+  cursor: pointer;
+  user-select: none;
+
+  &::after {
+    position: absolute;
+  }
+
+  &__list {
+    position: absolute;
+    font-size: 16px;
+    padding: 14px 20px;
+    border-radius: 6px;
+    top: 45px;
+    left: 0;
+    border: 1px solid #F3D1BF;
+    cursor: pointer;
+    width: 100%;
+    z-index: 2;
+    background: #fff;
+    user-select: none;
+
+    &.on {
+      display: block;
+    }
+  }
+
+  &__item span {
+    display: block;
+    padding: 10px 15px;
+
+    &:hover {
+      color: #EF6D58;
+    }
+  }
+
+  &:after {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 9px;
+    top: 9px;
+    background: url(../img/triangle.svg) no-repeat center;
+
+    -webkit-transition: all .27s ease-in-out;
+    -o-transition: all .27s ease-in-out;
+    transition: all .27s ease-in-out;
+
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  &.on:after {
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+}
+
+.file {
+
+  &__item {
+    position: relative;
+  }
+
+  &__input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    font-style: 0;
+    cursor: pointer;
+  }
+
+  &__button {
+    display: inline-flex;
+    min-height: 40px;
+    background: #e7c9c4;
+    border-radius: 6px;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+  }
+}
+
+textarea.form__input {
+  min-height: 120px;
+  resize: vertical;
+  background: #FFFFFF;
+  border: 1px solid #F3D1BF;
+  border-radius: 6px;
+  padding: 9px 16px;
+}
+
+.checkbox {
+  &__input {
+    display: none;
+
+    &:checked+.checkbox__label::after {
+      transform: scale(1);
+    }
+  }
+
+  &__label {
+    display: inline-flex;
+    align-items: center;
+    line-height: 140%;
+    position: relative;
+    cursor: pointer;
+
+    &::before {
+      content: "";
+      align-self: flex-start;
+      flex: 0 0 24px;
+      height: 24px;
+      background-color: #fff;
+      border-radius: 6px;
+      border-color: #000;
+      margin: 0 10px 0 0;
+      border: 1px solid #F3D1BF;
+    }
+
+    &::after {
+      content: "";
+      width: 16px;
+      height: 16px;
+      position: absolute;
+      top: 4.5px;
+      left: 5px;
+      border-radius: 5px;
+      background-color: #EF6D58;
+      transform: scale(0);
+    }
+
+    & a {
+      color: #EF6D58;
+    }
   }
 }
