--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -12,17 +12,39 @@
 
 .form {
   margin: 30px;
-  & * {
-    outline: none;
-  }
-
-  display: flex;
-  flex-direction: column;
   background: rgba(255, 255, 255, 0.75);
   border-radius: 6px;
   width: 50%;
   color: black;
   padding: 48px;
+
+  & * {
+    outline: none;
+  }
+
+  &__body {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.99) url(../img/loading.svg) center / 50px no-repeat;
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    &._sending::after {
+      opacity: 1;
+      visibility: visible;
+      transition: all 0.5s ease 0s;
+    }
+  }
 
   &__title {
     font-size: 24px;
@@ -42,6 +64,15 @@
     border-radius: 6px;
     width: 100%;
     font-size: 16px;
+    transition: box-shadow 0.5s ease 0s;
+
+    &._error {
+      box-shadow: 0 0 12px #ff2200;
+    }
+
+    &:focus {
+      box-shadow: 0 0 4px #EF6D58;
+    }
 
     &::placeholder {
       color: #000;
@@ -77,6 +108,7 @@
 .select {
   display: block;
   position: relative;
+
 }
 
 .new-select {
@@ -90,6 +122,11 @@
   padding: 14px 20px;
   cursor: pointer;
   user-select: none;
+  transition: box-shadow 0.5s ease 0s;
+
+  &:hover {
+    box-shadow: 0 0 4px #EF6D58;
+  }
 
   &::after {
     position: absolute;
@@ -189,6 +226,10 @@ textarea.form__input {
 }
 
 .checkbox {
+
+  &._error .checkbox__label::before{
+    box-shadow: 0 0 12px #ff2200;
+  }
   &__input {
     display: none;
 
